--- a/index.html
+++ b/index.html
@@ -135,8 +135,12 @@
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
                     esse cillum.
                 </p>
-                <div class="map"></div>
-                <div class="contact"></div>
+                <div class="map">
+                    <img src="" alt="">
+                </div>
+                <div class="contact">
+                    
+                </div>
             </div>
         </div>
     </section>
