Update index.html && screen.scss

--- a/index.html
+++ b/index.html
@@ -136,10 +136,15 @@
                     esse cillum.
                 </p>
                 <div class="map">
-                    <img src="" alt="">
+                    <img src="images/map.jpg" alt="our address">
                 </div>
                 <div class="contact">
-                    
+                    <form action="#" method="post">
+                        <h3>Contact Details: </h3>
+                         <span class="fa fa-phone">(+91)0975 720 3582</span>
+                         <span class="fa fa-envelope-o">Email@domain.com</span>
+                         <span class="fa fa-map-marker">No. 235, New ST, 25<sup>th</sup> Sector, London, England</span>
+                    </form>
                 </div>
             </div>
         </div>
