--- a/index.html
+++ b/index.html
@@ -128,22 +128,27 @@
     <section class="contact-us">
         <div class="wrapper">
             <div class="content">
-                <h2>Contact us</h2>
-                <p class="descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor  ut labore eturet dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum.  Lorem ipsum dolor       sit amet, consectetur adipisicing elit, sed do eiusmod tempor  ut labore eturet dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum.
-                </p>
+                <div class="address-information">
+                    <h2>Contact us</h2>
+                    <p class="descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor  ut labore eturet dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum.  Lorem ipsum dolor       sit amet, consectetur adipisicing elit, sed do eiusmod tempor  ut labore eturet dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                        esse cillum.
+                    </p>
+                </div>
                 <div class="map">
                     <img src="images/map.jpg" alt="our address">
                 </div>
                 <div class="contact">
                     <form action="#" method="post">
                         <h3>Contact Details: </h3>
-                         <span class="fa fa-phone">(+91)0975 720 3582</span>
-                         <span class="fa fa-envelope-o">Email@domain.com</span>
-                         <span class="fa fa-map-marker">No. 235, New ST, 25<sup>th</sup> Sector, London, England</span>
+                         <span>(+91)0975 720 3582</span>
+                         <span>Email@domain.com</span>
+                         <span>No. 235, New ST, 25<sup>th</sup> Sector, London, England</span>
+                         <input type="text" name="name" placeholder="Name">
+                         <input type="email" name="email" placeholder="Email">
+                        <textarea name="comments"></textarea>
                     </form>
                 </div>
             </div>
