Update a index.html && screen.css

--- a/index.html
+++ b/index.html
@@ -143,12 +143,30 @@
                 <div class="contact">
                     <form action="#" method="post">
                         <h3>Contact Details: </h3>
-                         <span>(+91)0975 720 3582</span>
-                         <span>Email@domain.com</span>
-                         <span>No. 235, New ST, 25<sup>th</sup> Sector, London, England</span>
-                         <input type="text" name="name" placeholder="Name">
-                         <input type="email" name="email" placeholder="Email">
-                        <textarea name="comments"></textarea>
+                        <ul class="contact-info">
+                            <li>
+                                <span class="fa fa-phone"></span>
+                                <span>(+91)0975 720 3582</span>
+                            </li>
+                            <li>
+                                <span class="fa fa-envelope-o"></span>
+                                <span>Email@domain.com</span>
+                            </li>
+                            <li>
+                                <span class="fa fa-map-marker"></span>
+                                <span>No. 235, New ST, 25<sup>th</sup> Sector, London, England</span>
+                            </li>
+                            <li>
+                                <input type="text" name="name" placeholder="Name">
+                            </li>
+                            <li>
+                                <input type="email" name="email" placeholder="Email">
+                            </li>
+                            <li>
+                                <textarea name="comments" placeholder="Message"></textarea>
+                            </li>
+                        </ul>
+                        <input type="submit" name="send" value="Submit">
                     </form>
                 </div>
             </div>
