Update a project. Added a new tag for index.html and selectors for screen.css

--- a/index.html
+++ b/index.html
@@ -145,16 +145,22 @@
                         <h3>Contact Details: </h3>
                         <ul class="contact-info">
                             <li>
-                                <span class="fa fa-phone"></span>
-                                <span>(+91)0975 720 3582</span>
+                                <div class="list-address">
+                                    <span class="fa fa-phone"></span>
+                                    <span>(+91)0975 720 3582</span>
+                                </div>
                             </li>
                             <li>
-                                <span class="fa fa-envelope-o"></span>
-                                <span>Email@domain.com</span>
+                                <div class="list-address">
+                                    <span class="fa fa-envelope-o"></span>
+                                    <span>Email@domain.com</span>
+                                </div>
                             </li>
                             <li>
-                                <span class="fa fa-map-marker"></span>
-                                <span>No. 235, New ST, 25<sup>th</sup> Sector, London, England</span>
+                                <div class="list-address">
+                                    <span class="fa fa-map-marker"></span>
+                                    <span>No. 235, New ST, 25<sup>th</sup> Sector, London, England</span>
+                                </div>
                             </li>
                             <li>
                                 <input type="text" name="name" placeholder="Name">
@@ -172,5 +178,12 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="wrapper">
+            <div class="content">
+                <h4>Copyright &copy; Default Value.</h4>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
